fixed text overflow glitch due to css grid usage

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
   overflow: hidden;
 }
 
-#content1{
+/* #content1{
   display: grid;
   grid-template-columns:1fr
   text-align: center;
@@ -36,12 +36,11 @@ body {
   display: grid;
   grid-template-columns:1fr
   text-align: center;
-}
-#content4{
+} */
+/* #content4{
   display: grid;
   grid-template-columns:1fr
-  text-align: center;
-}
+} */
 ul li {
   list-style-type: none; /* Remove default bullets */
 }
@@ -291,7 +290,6 @@ section.heroTop {
     grid-template-areas:
     ". co description ."; */
 }
-
 
 .content {
   padding-left: 50px;
